--- a/Lootopia/app/src/styles.css
+++ b/Lootopia/app/src/styles.css
@@ -1,5 +1,23 @@
-/* Mode clair */
+/* Mode clair
 :root {
+  --text-color: #121212;
+  --background-color: #f5f5f5;
+  --card-background-color: #ffffff;
+  --icon-color: #121212;
+} */
+
+/* Mode sombre */
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: #ffffff;
+    --background-color: #11151D;
+    --card-background-color: #222D41;
+    --icon-color: #ffffff;
+  }
+} */
+
+/* Mode clair */
+.light {
   --text-color: #121212;
   --background-color: #f5f5f5;
   --card-background-color: #ffffff;
@@ -7,11 +25,9 @@
 }
 
 /* Mode sombre */
-@media (prefers-color-scheme: dark) {
-  :root {
-    --text-color: #ffffff;
-    --background-color: #11151D;
-    --card-background-color: #222D41;
-    --icon-color: #ffffff;
-  }
+.dark {
+  --text-color: #ffffff;
+  --background-color: #11151D;
+  --card-background-color: #222D41;
+  --icon-color: #ffffff;
 }
