--- a/Lootopia/app/src/styles.css
+++ b/Lootopia/app/src/styles.css
@@ -1,22 +1,3 @@
-/* Mode clair
-:root {
-  --text-color: #121212;
-  --background-color: #f5f5f5;
-  --card-background-color: #ffffff;
-  --icon-color: #121212;
-} */
-
-/* Mode sombre */
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --text-color: #ffffff;
-    --background-color: #11151D;
-    --card-background-color: #222D41;
-    --icon-color: #ffffff;
-  }
-} */
-
-/* Mode clair */
 .light {
   --text-color: #121212;
   --background-color: #f5f5f5;
@@ -24,10 +5,31 @@
   --icon-color: #121212;
 }
 
-/* Mode sombre */
 .dark {
   --text-color: #ffffff;
   --background-color: #11151D;
   --card-background-color: #222D41;
   --icon-color: #ffffff;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.style-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+button {
+  all: unset;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
 }
