clean code search bar

--- a/Lootopia/app/src/styles.css
+++ b/Lootopia/app/src/styles.css
@@ -77,20 +77,6 @@ display: flex;
   transform: scale(1.2);
 }
 
-.search-bar {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 8px 12px;
-  font-size: 16px;
-  background-color: var(--card-background-color);
-  border: 1px solid var(--icon-color);
-  border-radius: 8px;
-}
-
-.card-container {
-  margin-top: 20px;
-}
-
 /* Hunting Section */
 .section-title {
   font-size: 20px;
@@ -104,6 +90,7 @@ display: flex;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
 .hunting-card {
@@ -135,6 +122,9 @@ display: flex;
   display: flex;
   align-items: flex-start;
   margin-top: 34px;
+  justify-content: center;
+  justify-content: space-between;
+
 }
 
 .evenement-card-row {
@@ -175,6 +165,28 @@ display: flex;
   gap: 16px;
   min-width: max-content;
 }
+
+/* SearchBar Section */
+.search-bar {
+  width: 70%;
+  padding: 5px 5px;
+  font-size: 16px;
+  background-color: var(--card-background-color);
+  border: 1px solid var(--icon-color);
+  border-radius: 8px;
+  color: var(--text-color);
+}
+
+.search-input {
+  background-color: var(--card-background-color);
+  border: none;
+  outline: none;
+  color: var(--text-color);
+  font-size: 16px;
+  flex: 1;
+  padding: 8px;
+}
+
 /* DARK MODE AND LIGHT MODE */
 
 @media (max-width: 768px) {
