--- a/Lootopia/app/src/styles.css
+++ b/Lootopia/app/src/styles.css
@@ -16,7 +16,7 @@
 display: flex;
   flex-direction: column;
   background-color: var(--background-color);
-  height:100vh;
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
