--- a/Lootopia/frontend/app/src/styles.css
+++ b/Lootopia/frontend/app/src/styles.css
@@ -322,64 +322,104 @@ body.dark .menu-icon {
 
 /* Dashboard */
 
-.table-container {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  width: 100%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.dashboard-container {
+  padding: 20px;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
-.table-header {
-  flex-direction: row;
-  background-color: #f2f2f2;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-bottom: 2px solid #ccc;
-  display: flex;
-  justify-content: space-between;
-}
-
-.header-cell {
-  flex: 1;
+.dashboard-title {
+  font-size: 24px;
   font-weight: bold;
-  text-align: center;
-  padding: 5px;
-  border-right: 1px solid #ccc;
+  margin-bottom: 16px;
+  color: var(--text-color);
 }
 
-.table-row {
-  flex-direction: row;
-  padding: 10px;
-  border-bottom: 1px solid #eee;
+.dashboard-table-container {
+  margin-top: 20px;
+  background-color: var(--background-color);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.dashboard-table-header {
   display: flex;
-  justify-content: space-between;
-  background-color: #fff;
+  padding: 10px;
+  background-color: #bcbcbc;
 }
 
-.cell {
+.dashboard-header-cell {
   flex: 1;
   text-align: center;
-  padding: 5px;
-  border-left: 1px solid #ccc;
 }
 
-.table-row:last-child {
-  border-bottom: none;
+.dashboard-table-row {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
 }
 
-.table-row:hover {
-  background-color: #f5f5f5;
+.dashboard-cell {
+  flex: 1;
+  text-align: center;
 }
 
-.table-row td {
-  border-right: 1px solid #ccc;
-  padding: 12px 15px;
+.dashboard-action {
+  flex: 1;
+  text-align: center;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-.title{
-  font-family: 'Roboto', sans-serif;
+.dashboard-action.active {
+  color: green;
+}
+
+.dashboard-action.inactive {
+  color: red;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 44px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #15ff00;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked+.slider {
+  background-color: #ff0000;
+}
+
+input:checked+.slider:before {
+  transform: translateX(20px);
 }
