--- a/Lootopia/frontend/app/src/styles.css
+++ b/Lootopia/frontend/app/src/styles.css
@@ -525,3 +525,108 @@ input:checked+.slider:before {
   gap: 1rem;
   margin-bottom: 1rem;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+}
+
+.predefined-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.predefined-buttons button {
+  padding: 5px 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.predefined-buttons button:hover {
+  background-color: #45a049;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.confirm-button,
+.cancel-button {
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.confirm-button {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.cancel-button {
+  background-color: #f44336;
+  color: white;
+}
+.selected-duration {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+}
+
+.predefined-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 10px;
+  width: 100%;
+}
+
+.predefined-buttons button {
+  flex-grow: 1;
+  width: 60px;
+  height: 40px;
+  padding: 10px;
+  background-color: #F9968B;
+  color: white;
+  font-size: 9px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 25px;
+  transition: background-color 0.2s ease;
+  text-align: center;
+  white-space: normal;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+
+.predefined-buttons button:hover {
+  background-color: #F27438;
+}
+
+.predefined-buttons button.selected {
+  background-color: #F27438;
+  color: white;
+  border: 1px solid #F27438;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.predefined-buttons button:focus {
+  outline: none;
+}
